--- a/.settings/projcfg.ini
+++ b/.settings/projcfg.ini
@@ -1,5 +1,5 @@
 #RT-Thread Studio Project Configuration
-#Thu Jul 18 08:20:15 CST 2024
+#Wed Dec 11 09:44:13 CST 2024
 project_type=rtt
 chip_name=STM32WLE5CCUx
 cpu_name=None
@@ -17,6 +17,6 @@ tool_chain=gcc
 uart_name=uart1
 tx_pin_name=PA9
 rtt_nano_path=
-output_project_path=D\:/
+output_project_path=D\:\\
 hardware_adapter=ST-LINK
 project_name=Aqualarm_Allinone_LoRa
